# materials

./: .gitignore  README.md
HPC/lab4/3240104875-王耀-solver/: CMakeLists.txt  compile.sh  run.sh
HPC/lab4/3240104875-王耀-solver/profile/omp_profile/: r000hs.vtune
HPC/lab4/3240104875-王耀-solver/profile/omp_profile/config/: analysis_type.cfg  collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
HPC/lab4/3240104875-王耀-solver/profile/omp_profile/data.0/: 3672231-3672241.0-3672241.0.th  3672231-3672241.0-3672241.0.th.aux  3672231-3672241.0-3672266.0.th  3672231-3672241.0-3672266.0.th.aux  3672231-3672241.0-3672268.0.th  3672231-3672241.0-3672268.0.th.aux  3672231-3672241.0-3672269.0.th  3672231-3672241.0-3672269.0.th.aux  3672231-3672241.0-3672270.0.th  3672231-3672241.0-3672270.0.th.aux  3672231-3672241.0-3672271.0.th  3672231-3672241.0-3672271.0.th.aux  3672231-3672241.0-3672272.0.th  3672231-3672241.0-3672272.0.th.aux  3672231-3672241.0-3672273.0.th  3672231-3672241.0-3672273.0.th.aux  3672231-3672241.0-3672274.0.th  3672231-3672241.0-3672274.0.th.aux  3672231-3672241.0-3672275.0.th  3672231-3672241.0-3672275.0.th.aux  3672231-3672241.0-3672276.0.th  3672231-3672241.0-3672276.0.th.aux  3672231-3672241.0-3672277.0.th  3672231-3672241.0-3672277.0.th.aux  3672231-3672241.0-3672278.0.th  3672231-3672241.0-3672278.0.th.aux  3672231-3672241.0-3672279.0.th  3672231-3672241.0-3672280.0.th  (+28 more)
HPC/lab4/3240104875-王耀-solver/profile/r000hs/: r000hs.vtune
HPC/lab4/3240104875-王耀-solver/src/: main.cpp
HPC/lab4/3240104875-王耀-solver/src/bicgstab/: solver.c  solver.f90
(+253 files in other folders)
